# advent-of-code

./: .gitignore
2025-clj/: .gitignore
2025-clj/src/: 2022.day1.clj  day1.clj  scratch.clj  tools.clj
2025-clj/src/get_started/: hello_paredit.clj  welcome_to_clojure.clj
2025-rs/: Cargo.toml
2025-rs/src/: lib.rs  main.rs
2025-rs/src/template/: day.rs
