[package]
name = "advent_of_code"
version = "0.11.0"
authors = [
    "Felix Spöttel <1682504+fspoettel@users.noreply.github.com>",
    "Jesse Ashmore <mail@jesse.ie>",
]
edition = "2021"
default-run = "advent_of_code"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
doctest = false

[profile.dhat]
inherits = "release"
debug = 1

[features]
dhat-heap = ["dhat"]
today = ["chrono"]
test_lib = []

[dependencies]

# Template dependencies
counter = "0.6.0"
dhat = { version = "0.3.2", optional = true }
fxhash = "0.2.1"
itertools = "0.13.0"
pico-args = "0.5.0"
regex = "1.11.1"
tinyjson = "2.5.1"

# Solution dependencies

# On Windows, highs requires cmake in PATH, e.g. C:\Program Files (x86)\Microsoft Visual Studio\2022\BuildTools\...\CMake\CMake\bin
# It also requires LLVM: https://llvm.org/docs/GettingStartedVS.html OR winget install llvm
# It also requires coin_cbc for some reason
good_lp = { version = "1.14.2", features = ["highs"] }
chrono = {version = "0.4.42", optional = true }
